add login and register

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<div class="shortcut-w">
 		<div class="location">
 			<i class="iconfont">&#xe620;</i>
-			<span>北京</span>
+			<span class="province-selected">北京</span>
 			<div class="province-clearline"></div>
 			<div class="province">
 				<ul>
@@ -62,8 +62,8 @@
 		<div class="info">
 			<ul class="clearfix">
 				<li>
-					<a href="#">你好，请登录</a>
-					<a href="#" class="style-red">免费注册</a>
+					<a href="login.html">你好，请登录</a>
+					<a href="register.html" class="style-red">免费注册</a>
 				</li>
 				<li class="spacer"></li>
 				<li><a href="#">我的订单</a></li>
@@ -77,7 +77,7 @@
 								<a href="#"><img src="img/no-img_mid_.jpg" width="60" height="60"/></a>
 							</div>
 							<div class="u-login">
-								<a href="#">你好，请登录</a>
+								<a href="login.html">你好，请登录</a>
 							</div>
 							<div class="u-extra">
 								<a href="#">优惠券</a>
@@ -2679,8 +2679,8 @@
 			<div class="user-info ">
 				<img src="img/no-img_mid_.jpg" width="45" height="45"/>
 				<h3>Hi，欢迎来到京东！</h3>
-				<a href="#">登录</a>
-				<a href="#">注册</a>
+				<a href="login.html">登录</a>
+				<a href="register.html">注册</a>
 				<p>
 					<a href="#">新人福利</a>
 					<a href="#">PLUS会员</a>
