--- a/login.html
+++ b/login.html
@@ -91,7 +91,7 @@
 							</a>
 						</li>
 						<li class="extra-r">
-							<a href="javascript:;">
+							<a href="register.html">
 								<b></b>
 								<span>立即注册</span>
 							</a>
