Revert "repair bug"
This reverts commit 95716ed8994073681aa63605cdf101e0075888ca.

--- a/login.html
+++ b/login.html
@@ -91,7 +91,7 @@
 							</a>
 						</li>
 						<li class="extra-r">
-							<a href="register.html">
+							<a href="javascript:;">
 								<b></b>
 								<span>立即注册</span>
 							</a>
